Add height to body so sticky footer works
Want: sticky footer and content occupying all space
Problem: content is not expanding to available space even though flex 1 is added and display flex is inherited from body
Solution: add height to body (100vh, NOT 100hv )

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body {
     font-family: 'Roboto', system-ui, sans-serif;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     margin: 0;
