--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body {
     font-family: 'Roboto', system-ui, sans-serif;
+    font-size: 18px;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -35,6 +36,7 @@ body {
 /* Header */
 .logo {
     font-size: 24px;
+    font-weight: bolder;
 }
 
 ul {
@@ -53,14 +55,19 @@ a {
 /* Content */
 .first-section {
     background-color: #1F2937;
+    color: #F9FAF8;
     display: flex;
+    justify-content: space-between;
     padding: 64px 300px;
+    gap: 64px;
 }
 
-.hero-text {
+.hero {
     display: flex;
     flex-direction: column;
-    width: 400px;
+    align-items: flex-start;
+    width: 450px;
+    gap: 8px;
 }
 
 .hero-title {
@@ -68,8 +75,28 @@ a {
     font-size: 48px;
 }
 
+.text {
+    color: #E5E7EB;
+}
+
+.placeholder {
+    background-color: #6d747d;
+    width: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.second-section {
+    display: flex;
+    flex-direction: column;
+}
+
 .third-section {
     background-color: #E5E7EB;
 }
 
+.fourth-section {
+    display: flex;
+}
 
