Add boxes to second section

--- a/style.css
+++ b/style.css
@@ -100,6 +100,40 @@ a {
 .second-section {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 32px; 300px;
+}
+
+.info-content {
+    text-align: center;
+    display: flex;
+    width: fit-content;
+    height: fit-content;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+}
+
+.info-header {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    text-align: center;
+    margin-bottom: 32px;
+}
+
+.info-box {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.box {
+    border: 5px solid #3882F6;
+    border-radius: 8px;
+    width: 175px;
+    height: 175px;
 }
 
 .third-section {
