--- a/style.css
+++ b/style.css
@@ -108,10 +108,6 @@ a {
 .info-content {
     text-align: center;
     display: flex;
-    width: fit-content;
-    height: fit-content;
-    justify-content: center;
-    align-items: center;
     gap: 16px;
 }
 
@@ -119,7 +115,6 @@ a {
     font-size: 36px;
     font-weight: bolder;
     color: #1F2937;
-    text-align: center;
     margin-bottom: 32px;
 }
 
@@ -134,6 +129,10 @@ a {
     border-radius: 8px;
     width: 175px;
     height: 175px;
+}
+
+.info-box .text {
+    color: #1F2937;
 }
 
 .third-section {
