Break up text in info section
Why: Design requires that box and text of info section are at the same width. This means that the text would break/wrap

To solve this, max-width is added to info such that the text would occupy more or less the same width with box and break-up to next line.

--- a/style.css
+++ b/style.css
@@ -118,9 +118,11 @@ a {
     margin-bottom: 32px;
 }
 
-.info-box {
+.info {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    max-width: 200px;
     gap: 8px;
 }
 
@@ -131,7 +133,7 @@ a {
     height: 175px;
 }
 
-.info-box .text {
+.info .text {
     color: #1F2937;
 }
 
