--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 32px 300px;
+    padding: 64px 300px 80px;
 }
 
 .info-content {
@@ -139,6 +139,22 @@ a {
 
 .third-section {
     background-color: #E5E7EB;
+    color: #1F2937;
+    padding: 80px 300px;
+    display: flex;
+    flex-direction: column;
+}
+
+.quote {
+    font-size: 36px;
+    font-weight:300;
+    font-style: italic;
+}
+
+.author {
+    font-size: 24px;
+    font-weight: bold;
+    align-self: flex-end;
 }
 
 .fourth-section {
