--- a/style.css
+++ b/style.css
@@ -44,9 +44,10 @@ button {
 }
 
 /* Header */
-.logo {
+.logo, .modal-title {
     font-size: 24px;
     font-weight: bolder;
+    color: #F9FAF8;
 }
 
 ul {
@@ -147,6 +148,7 @@ a {
 
 .quote {
     font-size: 36px;
+    /* Make quote lighter but this not working */
     font-weight:300;
     font-style: italic;
 }
@@ -158,6 +160,17 @@ a {
 }
 
 .fourth-section {
+    background-color: #3882F6;
+    border-radius: 8px;
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 80px 300px;
+    padding: 64px;
+    gap: 32px;
+}
+
+.fourth-section button {
+    border: 3px solid #F9FAF8;
 }
 
