--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 .header, .footer {
     background-color: #1F2937;
     color: #F9FAF8;
-    padding: 16px 300px;
+    padding: 8px 64px;
 }
 
 .header {
@@ -69,7 +69,7 @@ a {
     color: #F9FAF8;
     display: flex;
     justify-content: space-between;
-    padding: 64px 300px;
+    padding: 64px;
     gap: 64px;
 }
 
@@ -103,7 +103,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 64px 300px 80px;
+    padding: 64px;
 }
 
 .info-content {
@@ -141,7 +141,7 @@ a {
 .third-section {
     background-color: #E5E7EB;
     color: #1F2937;
-    padding: 80px 500px;
+    padding: 64px;
     display: flex;
     flex-direction: column;
     gap: 8px;
@@ -166,7 +166,7 @@ a {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin: 80px 300px;
+    margin: 64px;
     padding: 64px;
     gap: 32px;
 }
